# qt-atm-demo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  accountpanel.cpp  accountpanel.h  accountpanel.ui  dataoperator.cpp  dataoperator.h  inputDialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  userinfooperator.cpp  userinfooperator.h  userinfooperator.ui  validcheck.cpp  validcheck.h
.github/workflows/: cmake-single-platform.yml
